Networking/ingress-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  namespace: adminoperations
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: "/admin"
            pathType: Prefix
            backend:
              service:
                name: adminoperationsapi
                port:
                  number: 5003
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  namespace: usermanagement
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: "/user"
            pathType: Prefix
            backend:
              service:
                name: usermanagementapi
                port:
                  number: 5004
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  namespace: library
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: "/library"
            pathType: Prefix
            backend:
              service:
                name: libraryapi
                port:
                  number: 5001
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  namespace: wishlist
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: "/wishes"
            pathType: Prefix
            backend:
              service:
                name: wishlistapi
                port:
                  number: 5002
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  namespace: suggestions
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: "/suggestions"
            pathType: Prefix
            backend:
              service:
                name: suggestionsapi
                port:
                  number: 5008
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  namespace: searches
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: "/searches"
            pathType: Prefix
            backend:
              service:
                name: searchesapi
                port:
                  number: 5078
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  namespace: reviews
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: "/reviews"
            pathType: Prefix
            backend:
              service:
                name: reviews-api-s
                port:
                  number: 5012
