Networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steam-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: "/admin"
        pathType: Prefix
        backend:
          service:
            name: adminoperationsapi
            namespace: adminoperations
            port:
              number: 5003
      - path: "/user"
        pathType: Prefix
        backend:
          service:
            name: usermanagementapi
            namespace: usermanagement
            port:
              number: 5004
      - path: "/library"
        pathType: Prefix
        backend:
          service:
            name: libraryapi
            namespace: default
            port:
              number: 5001
      - path: "/wishes"
        pathType: Prefix
        backend:
          service:
            name: wishlistapi
            namespace: default
            port:
              number: 5002
      - path: "/suggestions"
        pathType: Prefix
        backend:
          service:
            name: suggestionsapi
            namespace: default
            port:
              number: 5008
      - path: "/searches"
        pathType: Prefix
        backend:
          service:
            name: searchesapi
            namespace: default
            port:
              number: 5078
      - path: "/reviews"
        pathType: Prefix
        backend:
          service:
            name: reviews-api-s
            namespace: default
            port:
              number: 5012
