Networking/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-usermanagment
  namespace: usermanagement
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: usermanagementapi
              servicePort: 5004
            path: /user
