Networking/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-adminoperations
  namespace: adminoperations
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: adminoperationsapi
              servicePort: 5003
            path: /admin
