Networking/network-policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy-admin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: adminoperationsapi
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy-user
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: usermanagementapi
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy-library
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: libraryapi
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy-wishlist
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wishlistapi
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy-suggestions
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: suggestionsapi
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy-searches
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: searchesapi
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-policy-reviews
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: reviews-api
